k8/crp2-tech-challenge/1-helm-debug/helm/app/backup/ingress-gw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
    - http:
        paths:
          - path: /de
            pathType: Exact
            backend:
              service:
                name: hello-world-de
                port:
                  number: 8000
          - path: /es
            pathType: Prefix
            backend:
              service:
                name: hello-world-es
                port:
                  number: 8000
          - path: /fr
            pathType: Exact
            backend:
              service:
                name: hello-world-fr
                port:
                  number: 8000
          - path: /eu
            pathType: Exact
            backend:
              service:
                name: hello-world-fr
                port:
                  number: 8000
